Incluir mes en curso

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div id="resultado" class="mt-4"></div>
 
     <!-- Calendario -->
-    <h2 class="mt-5 mb-3 text-center">Calendario del mes</h2>
+    <h2 id="calendarioTitulo" class="mt-5 mb-3 text-center"></h2>
     <div id="calendario" class="calendar shadow-sm"></div>
   </div>
 
