--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Farmacias de Guardia</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-light">
 
   <div class="container py-4">
-    <h1 class="text-center mb-4">Farmacias de Guardia</h1>
+    <h1 class="text-center mb-4">Farmacias de Guardia en Úbeda</h1>
 
     <!-- Filtros -->
     <div class="card p-3 shadow-sm mb-4">
