--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="col-md-4">
           <label for="fechaInput" class="form-label">Seleccionar fecha</label>
           <div class="input-group">
+            <button class="btn btn-outline-secondary" type="button" id="hoyBtn">Hoy</button>
             <input type="date" id="fechaInput" class="form-control">
             <button class="btn btn-outline-secondary" type="button" id="mananaBtn">Mañana</button>
             <button class="btn btn-outline-secondary" type="button" id="pasadoBtn">Pasado</button>
