--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="col-md-4">
           <label for="fechaInput" class="form-label">Seleccionar fecha</label>
           <div class="input-group">
-            <button class="btn btn-outline-secondary" type="button" id="hoyBtn">Hoy</button>
-            <input type="date" id="fechaInput" class="form-control">
+            <button class="btn btn-outline-secondary active" type="button" id="hoyBtn">Hoy</button>
             <button class="btn btn-outline-secondary" type="button" id="mananaBtn">Mañana</button>
             <button class="btn btn-outline-secondary" type="button" id="pasadoBtn">Pasado</button>
+            <input type="date" id="fechaInput" class="form-control">
           </div>
         </div>
         <div class="col-md-4 d-flex align-items-end">
