Agregar enlace descarga directa del pdf y actualización del fichero json

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
   <div class="container py-4">
     <h1 class="text-center mb-4">Farmacias de Guardia en Úbeda</h1>
 
+    <!-- Enlace de descarga del PDF -->
+    <div class="text-center mb-4">
+      <a href="/GUARDIAS_UBEDA_2025.pdf" class="btn btn-outline-success" download>
+        <i class="bi bi-file-earmark-pdf"></i>
+        Descargar calendario completo de guardias 2025 (PDF)
+      </a>
+    </div>
+
     <!-- Filtros -->
     <div class="card p-3 shadow-sm mb-4">
       <div class="row g-3">
