--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Enlace de descarga del PDF -->
     <div class="text-center mb-4">
-      <a href="/GUARDIAS_UBEDA_2025.pdf" class="btn btn-outline-success" download>
+      <a href="/ficheros/GUARDIAS_UBEDA_2025.pdf" class="btn btn-outline-success" download>
         <i class="bi bi-file-earmark-pdf"></i>
         Descargar calendario completo de guardias 2025 (PDF)
       </a>
