--- a/index.html
+++ b/index.html
@@ -45,6 +45,18 @@
     <!-- Calendario -->
     <h2 id="calendarioTitulo" class="mt-5 mb-3 text-center"></h2>
     <div id="calendario" class="calendar shadow-sm"></div>
+
+    <!-- Visualización automática del PDF -->
+    <div class="mt-4 mb-4 text-center">
+      <embed src="/ficheros/GUARDIAS_UBEDA_2025.pdf" type="application/pdf" width="100%" height="600px" />
+      <p class="text-muted mt-2" style="font-size:0.95em;">
+        Si no puedes ver el PDF, <a href="/ficheros/GUARDIAS_UBEDA_2025.pdf" download>descárgalo aquí</a>.
+      </p>
+    </div>
+
+    <footer class="text-center mt-5 mb-3 text-muted">
+      &copy; 2025 Farmacias de Guardia en Úbeda
+    </footer>
   </div>
 
   <script src="script.js"></script>
