Nueva ubicación para el pdf para que se pueda visualizar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Enlace de descarga del PDF -->
     <div class="text-center mb-4">
-      <a href="/ficheros/GUARDIAS_UBEDA_2025.pdf" class="btn btn-outline-success" download>
+      <a href="/GUARDIAS_UBEDA_2025.pdf" class="btn btn-outline-success" download>
         <i class="bi bi-file-earmark-pdf"></i>
         Descargar calendario completo de guardias 2025 (PDF)
       </a>
@@ -48,9 +48,9 @@
 
     <!-- Visualización automática del PDF -->
     <div class="mt-4 mb-4 text-center">
-      <embed src="/ficheros/GUARDIAS_UBEDA_2025.pdf" type="application/pdf" width="100%" height="600px" />
+      <embed src="/GUARDIAS_UBEDA_2025.pdf" type="application/pdf" width="100%" height="600px" />
       <p class="text-muted mt-2" style="font-size:0.95em;">
-        Si no puedes ver el PDF, <a href="/ficheros/GUARDIAS_UBEDA_2025.pdf" download>descárgalo aquí</a>.
+        Si no puedes ver el PDF, <a href="/GUARDIAS_UBEDA_2025.pdf" download>descárgalo aquí</a>.
       </p>
     </div>
 
