Actualizar la URL de visualización automática del PDF para apuntar a la ubicación correcta

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <!-- Visualización automática del PDF -->
     <div class="mt-4 mb-4 text-center">
-      <embed src="/GUARDIAS_UBEDA_2025.pdf" type="application/pdf" width="100%" height="600px" />
+      <embed src="https://rgarcial1983.github.io/farmacia-guardia/GUARDIAS_UBEDA_2025.pdf" type="application/pdf" width="100%" height="600px" />
       <p class="text-muted mt-2" style="font-size:0.95em;">
         Si no puedes ver el PDF, <a href="/GUARDIAS_UBEDA_2025.pdf" download>descárgalo aquí</a>.
       </p>
