Agregar botones de redes sociales y actualizar el pie de página en index.html

--- a/index.html
+++ b/index.html
@@ -46,17 +46,26 @@
     <h2 id="calendarioTitulo" class="mt-5 mb-3 text-center"></h2>
     <div id="calendario" class="calendar shadow-sm"></div>
 
-    <!-- Visualización automática del PDF -->
-    <div class="mt-4 mb-4 text-center">
-      <embed src="https://rgarcial1983.github.io/farmacia-guardia/GUARDIAS_UBEDA_2025.pdf" type="application/pdf" width="100%" height="600px" />
-      <p class="text-muted mt-2" style="font-size:0.95em;">
-        Si no puedes ver el PDF, <a href="/GUARDIAS_UBEDA_2025.pdf" download>descárgalo aquí</a>.
-      </p>
-    </div>
-
-    <footer class="text-center mt-5 mb-3 text-muted">
-      &copy; 2025 Farmacias de Guardia en Úbeda
+    <!-- Pie de página con botones de redes sociales -->    
+    <footer class="bg-light text-center text-lg-start mt-5">
+      <div class="container p-4">
+        <section class="mb-4">
+          <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button" aria-label="Google">
+            <i class="fab fa-google"></i>
+          </a>
+          <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </section>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2025 Farmacias de Guardia en Úbeda
+        </div>
+      </div>
     </footer>
+
   </div>
 
   <script src="script.js"></script>
