--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- Enlace de descarga del PDF -->
     <div class="text-center mb-4">
-      <a href="/GUARDIAS_UBEDA_2025.pdf" class="btn btn-outline-success" download>
+      <a href="/ficheros/GUARDIAS_UBEDA_2025.pdf" class="btn btn-outline-success" download>
         <i class="bi bi-file-earmark-pdf"></i>
         Descargar calendario completo de guardias 2025 (PDF)
       </a>
@@ -31,7 +31,7 @@
             <button class="btn btn-outline-secondary active" type="button" id="hoyBtn">Hoy</button>
             <button class="btn btn-outline-secondary" type="button" id="mananaBtn">Mañana</button>
             <button class="btn btn-outline-secondary" type="button" id="pasadoBtn">Pasado</button>
-            <input type="date" id="fechaInput" class="form-control">
+            <input type="date" id="fechaInput" class="form-control" aria-label="Seleccionar fecha">
           </div>
         </div>
         <div class="col-md-4 d-flex align-items-end">
