--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
     <!-- Filtros -->
     <div class="card p-3 shadow-sm mb-4">
       <div class="row g-3">
-        <div class="col-md-4">
+        <!-- Botones Hoy, Mañana, Pasado en una fila -->
+        <div class="col-12 mb-2 d-flex justify-content-center">
+          <button class="btn btn-outline-secondary me-2 active" type="button" id="hoyBtn">Hoy</button>
+          <button class="btn btn-outline-secondary me-2" type="button" id="mananaBtn">Mañana</button>
+          <button class="btn btn-outline-secondary" type="button" id="pasadoBtn">Pasado</button>
+        </div>
+        <!-- Input de fecha en una fila inferior -->
+        <div class="col-md-4 offset-md-4">
           <label for="fechaInput" class="form-label">Seleccionar fecha</label>
           <div class="input-group">
-            <button class="btn btn-outline-secondary active" type="button" id="hoyBtn">Hoy</button>
-            <button class="btn btn-outline-secondary" type="button" id="mananaBtn">Mañana</button>
-            <button class="btn btn-outline-secondary" type="button" id="pasadoBtn">Pasado</button>
-            <input type="date" id="fechaInput" class="form-control"  placeholder="Seleccionar fecha">
+            <input type="date" id="fechaInput" class="form-control">
+            <button class="btn btn-primary" id="buscarBtn">Buscar</button>
           </div>
-        </div>
-        <div class="col-md-4 d-flex align-items-end">
-          <button class="btn btn-primary w-100" id="buscarBtn">Buscar</button>
         </div>
       </div>
     </div>
