--- a/index.html
+++ b/index.html
@@ -4,73 +4,75 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Farmacias de Guardia</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-light">
+<body>
 
-  <div class="container py-4">
-    <h1 class="text-center mb-4">Farmacias de Guardia en Úbeda</h1>
-
-    <!-- Enlace de descarga del PDF -->
-    <div class="text-center mb-4">
-      <a href="https://rgarcial1983.github.io/farmacia-guardia/ficheros/GUARDIAS_UBEDA_2025.pdf" class="btn btn-outline-success" download>
-        <i class="bi bi-file-earmark-pdf"></i>
-        Descargar calendario completo de guardias 2025 (PDF)
-      </a>
+  <!-- Header -->
+  <div class="header-section">
+    <div class="container">
+      <h1>
+        <i class="fas fa-pills icon"></i> Farmacias de Guardia
+      </h1>
+      <p class="subtitle">Úbeda - Siempre a tu servicio</p>
+      
+      <div class="text-center">
+        <a href="https://rgarcial1983.github.io/farmacia-guardia/ficheros/GUARDIAS_UBEDA_2025.pdf" 
+           class="pdf-download-btn" download>
+          <i class="fas fa-file-pdf"></i> Descargar Calendario 2025
+        </a>
+      </div>
     </div>
+  </div>
 
+  <div class="container">
     <!-- Filtros -->
-    <div class="card p-3 shadow-sm mb-4">
-      <div class="row g-3">
-        <!-- Botones Hoy, Mañana, Pasado en una fila -->
-        <div class="col-12 mb-2 d-flex justify-content-center">
-          <button class="btn btn-outline-secondary me-2 active" type="button" id="hoyBtn">Hoy</button>
-          <button class="btn btn-outline-secondary me-2" type="button" id="mananaBtn">Mañana</button>
-          <button class="btn btn-outline-secondary" type="button" id="pasadoBtn">Pasado</button>
-        </div>
-        <!-- Input de fecha en una fila inferior -->
-        <div class="col-md-4 offset-md-4">
-          <label for="fechaInput" class="form-label">Seleccionar fecha</label>
-          <div class="input-group">
-            <input type="date" id="fechaInput" class="form-control">
-            <button class="btn btn-primary" id="buscarBtn">Buscar</button>
-          </div>
+    <div class="filters-card">
+      <div class="day-buttons">
+        <button class="day-btn active" id="hoyBtn">
+          <i class="fas fa-check"></i> Hoy
+        </button>
+        <button class="day-btn" id="mananaBtn">
+          <i class="fas fa-plus"></i> Mañana
+        </button>
+        <button class="day-btn" id="pasadoBtn">
+          <i class="fas fa-calendar-day"></i> Pasado
+        </button>
+      </div>
+      
+      <div class="date-selector">
+        <label for="fechaInput">
+          <i class="fas fa-calendar-alt"></i> O selecciona otra fecha:
+        </label>
+        <div class="input-group">
+          <input type="date" id="fechaInput">
+          <button id="buscarBtn"><i class="fas fa-search"></i> Buscar</button>
         </div>
       </div>
     </div>
 
     <!-- Resultado de búsqueda -->
-    <div id="resultado" class="mt-4"></div>
+    <div id="resultado"></div>
 
     <!-- Calendario -->
-    <h2 id="calendarioTitulo" class="mt-5 mb-3 text-center"></h2>
-    <div id="calendario" class="calendar shadow-sm"></div>
+    <div class="calendar-section">
+      <h2 class="calendar-title" id="calendarioTitulo"></h2>
+      <div id="calendario"></div>
+    </div>
 
-    <!-- Pie de página con botones de redes sociales -->    
-    <footer class="bg-light text-center text-lg-start mt-5">
-      <div class="container p-4">
-        <section class="mb-4">
-          <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button" aria-label="Twitter">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button" aria-label="Google">
-            <i class="fab fa-google"></i>
-          </a>
-          <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button" aria-label="Instagram">
-            <i class="fab fa-instagram"></i>
-          </a>
-        </section>
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2025 Farmacias de Guardia en Úbeda
-        </div>
+    <!-- Footer -->
+    <footer>
+      <div class="social-buttons">
+        <a class="btn-social" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+        <a class="btn-social" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a class="btn-social" href="#!" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+      </div>
+      <div class="copyright">
+        © 2025 Farmacias de Guardia en Úbeda
       </div>
     </footer>
-
   </div>
-
   <script src="script.js"></script>
 </body>
 </html>
