--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
   <div class="header-section">
     <div class="container">
       <h1>
-        <i class="fas fa-pills icon"></i> Farmacias de Guardia
+        <i class="fas fa-pills icon"></i> Úbeda - Farmacia de Guardia
       </h1>
-      <p class="subtitle">Úbeda - Siempre a tu servicio</p>
-      
       <div class="text-center">
         <a href="https://rgarcial1983.github.io/farmacia-guardia/ficheros/GUARDIAS_UBEDA_2025.pdf" 
            class="pdf-download-btn" download>
-          <i class="fas fa-file-pdf"></i> Descargar Calendario 2025
+          <i class="fas fa-file-pdf"></i> Descargar Calendario
         </a>
       </div>
     </div>
@@ -62,16 +60,21 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-      <div class="social-buttons">
-        <a class="btn-social" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-        <a class="btn-social" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a class="btn-social" href="#!" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      </div>
-      <div class="copyright">
-        © 2025 Farmacias de Guardia en Úbeda
-      </div>
-    </footer>
+    <div class="filters-card" style="margin-top: 2rem; text-align: center;">
+      <i class="fas fa-info-circle" style="font-size: 2rem; color: var(--primary-color); margin-bottom: 1rem;"></i>
+      <h3 style="color: var(--primary-color); margin-bottom: 0.5rem;">¿Encontraste algún error?</h3>
+      <p style="color: var(--text-light); margin-bottom: 1rem;">
+        Si los datos de alguna farmacia son incorrectos o necesitan actualización
+      </p>
+      <a href="mailto:rafa.garcia.leon@gmail.com?subject=Farmacias de Guardia - Corrección de datos" 
+        class="pdf-download-btn">
+        <i class="fas fa-envelope"></i> Contáctame
+      </a>
+      <p class="copyright">
+        © <span id="currentYear"></span> Farmacias de Guardia en Úbeda
+      </p>
+    </div>
+
   </div>
   <script src="script.js"></script>
 </body>
