--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="header-section">
     <div class="container">
       <h1>
-        <i class="fas fa-pills icon"></i> Úbeda - Farmacia de Guardia
+        <i class="fa-solid fa-staff-snake"></i> Úbeda - Farmacia de Guardia
       </h1>
       <div class="text-center">
         <a href="https://rgarcial1983.github.io/farmacia-guardia/ficheros/GUARDIAS_UBEDA_2025.pdf" 
