--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <div class="header-section">
     <div class="container">
       <h1>
-        <i class="fa-solid fa-staff-snake"></i> Úbeda - Farmacia de Guardia
+        <i class="fa-solid fa-staff-snake"></i> Farmacia de Guardia
       </h1>
+      <h4 class="subtitle">
+        Úbeda
+      </h4>
       <div class="text-center">
         <a href="https://rgarcial1983.github.io/farmacia-guardia/ficheros/GUARDIAS_UBEDA_2025.pdf" 
            class="pdf-download-btn" download>
