--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
       <h1>
         <i class="fa-solid fa-staff-snake"></i> Farmacia de Guardia
       </h1>
-      <h4 class="subtitle">
-        Úbeda
-      </h4>
+      <p class="subtitle">Úbeda - Siempre a tu servicio</p>
       <div class="text-center">
         <a href="https://rgarcial1983.github.io/farmacia-guardia/ficheros/GUARDIAS_UBEDA_2025.pdf" 
            class="pdf-download-btn" download>
