--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#00A86B">
+  <link rel="icon" href="favicon.ico" type="image/png">
   <title>Farmacias de Guardia</title>  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/style.css">  
@@ -86,7 +87,7 @@
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
         // Intenta registrar el archivo sw.js
-        navigator.serviceWorker.register('/sw.js')
+        navigator.serviceWorker.register('sw.js')
           .then(registration => {
             console.log('Service Worker registrado con éxito:', registration.scope);
           })
