--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <link rel="manifest" href="manifest.json">
   <meta charset="UTF-8">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#00A86B">
   <link rel="icon" href="favicon.ico" type="image/png">
@@ -95,7 +98,7 @@
     </div>
 
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script.js?v=20251123"></script>
   <script>
     // Comprueba si el navegador soporta Service Workers
     if ('serviceWorker' in navigator) {
