Actualizar días de guardia para diciembre y noviembre; cambiar clase del botón de contacto a 'donation-btn'

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         Si los datos de alguna farmacia son incorrectos o necesitan actualización
       </p>
       <a href="mailto:rafa.garcia.leon@gmail.com?subject=Farmacias de Guardia - Corrección de datos"
-        class="pdf-download-btn">
+        class="donation-btn">
         <i class="fas fa-envelope"></i> Contáctame
       </a>
     </div>
