--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
           class="pdf-download-btn" download>
           <i class="fas fa-file-pdf"></i> Descargar Calendario
         </a>
+
+        <button id="btn-instalar" style="display: none; margin: 5px auto; padding: 10px 20px; background-color: white; color: #00A86B; border: none; border-radius: 25px; font-weight: bold; font-size: 14px; cursor: pointer; box-shadow: 0 2px 5px rgba(0,0,0,0.2);">
+          <i class="fas fa-download"></i> Instalar App
+        </button>
       </div>
     </div>
   </div>
@@ -99,21 +103,7 @@
 
   </div>
   <script src="js/script.js?v=20251123"></script>
-  <script>
-    // Comprueba si el navegador soporta Service Workers
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        // Intenta registrar el archivo sw.js
-        navigator.serviceWorker.register('sw.js')
-          .then(registration => {
-            console.log('Service Worker registrado con éxito:', registration.scope);
-          })
-          .catch(err => {
-            console.error('Error al registrar el Service Worker:', err);
-          });
-      });
-    }
-  </script>
+
 </body>
 
 </html>
