--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@
           <i class="fas fa-check"></i> Hoy
         </button>
         <button class="day-btn" id="mananaBtn">
-          <i class="fas fa-plus"></i> Mañana
-        </button>
-        <button class="day-btn" id="pasadoBtn">
-          <i class="fas fa-calendar-day"></i> Pasado
+          <i class="fas fa-calendar-day"></i> Mañana
         </button>
       </div>
 
